force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/EEO_Intake_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>EEO Intake Questionnaire</label>
    <nameField>
        <displayFormat>EEO-{000000000}</displayFormat>
        <label>EEO Intake Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EEO Intake Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>