force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Aggrieved_Person_del__c.field-meta.xml
<CustomField>
    <fullName>Aggrieved_Person_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aggrieved Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EEO Intake Questionnaires</relationshipLabel>
    <relationshipName>EEO_Intake_Questionnaires_del</relationshipName>
    <type>Lookup</type>
</CustomField>