force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Ethnicity</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Disability (Physical)</fullName>
            </value>
            <value>
                <fullName>Disability (Mental)</fullName>
            </value>
            <value>
                <fullName>Sex</fullName>
            </value>
            <value>
                <fullName>Pregnancy</fullName>
            </value>
            <value>
                <fullName>Religion</fullName>
            </value>
            <value>
                <fullName>National Origin</fullName>
            </value>
            <value>
                <fullName>Sexual Harassment</fullName>
            </value>
            <value>
                <fullName>Retaliation/Reprisal for Previous EEO Activity</fullName>
            </value>
            <value>
                <fullName>Genetic Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>