force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Claim_s_of_Alleged_Discrimination__c.field-meta.xml
<CustomField>
    <fullName>Claim_s_of_Alleged_Discrimination__c</fullName>
    <label>Claim(s) of Alleged Discrimination</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment/Hire</fullName>
            </value>
            <value>
                <fullName>Assignment Of Duties</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Conversion To Full-Time</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Demotion</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Reprimand</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Suspension</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Termination</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Other</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Duty Hours</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Evaluation/Appraisal</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action-Examination/Test</fullName>
            </value>
            <value>
                <fullName>Harassment-Non-Sexual</fullName>
            </value>
            <value>
                <fullName>Harassment-Sexual</fullName>
            </value>
            <value>
                <fullName
        >Harassment-Hostile Work Environment (non-sexual)</fullName>
                <label>Harassment-Hostile Work Environment (non-sexual)</label>
            </value>
            <value>
                <fullName
        >Harassment-Hostile Work Environment (sexual)</fullName>
                <label>Harassment-Hostile Work Environment (sexual)</label>
            </value>
            <value>
                <fullName>Harassment-Medical Examination</fullName>
            </value>
            <value>
                <fullName>Harassment-Pay Including Overtime</fullName>
            </value>
            <value>
                <fullName
        >Harassment- Performance Evaluation/ Appraisal</fullName>
                <label>Harassment- Performance Evaluation/ Appraisal</label>
            </value>
            <value>
                <fullName>Harassment-Promotion/Non-Selection</fullName>
            </value>
            <value>
                <fullName>Reassignment-Denied</fullName>
            </value>
            <value>
                <fullName>Reassignment-Directed</fullName>
            </value>
            <value>
                <fullName
        >Reassignment-Reasonable Accommodation – Disability</fullName>
                <label
        >Reassignment-Reasonable Accommodation – Disability</label>
            </value>
            <value>
                <fullName>Reassignment-Reinstatement</fullName>
            </value>
            <value>
                <fullName>Reassignment-Religious Accommodation</fullName>
            </value>
            <value>
                <fullName>Reassignment-Retirement</fullName>
            </value>
            <value>
                <fullName
        >Reassignment-Sex Stereotyping (LGBT- related discrimination only)</fullName>
                <label
        >Reassignment-Sex Stereotyping (LGBT- related discrimination only)</label>
            </value>
            <value>
                <fullName>Reassignment-Telework</fullName>
            </value>
            <value>
                <fullName>Reassignment-Termination</fullName>
            </value>
            <value>
                <fullName>Reassignment-Terms/Conditions Of Employment</fullName>
            </value>
            <value>
                <fullName>Reassignment-Time And Attendance</fullName>
            </value>
            <value>
                <fullName>Reassignment-Training</fullName>
            </value>
            <value>
                <fullName>Reassignment-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>