force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Date_Last_Employed_at_Department__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Employed_at_Department__c</fullName>
    <label>Date Last Employed at Department</label>
    <type>Date</type>
</CustomField>