force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Details_of_Allegation_s_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Allegation_s_Issue_s__c</fullName>
    <label>Details of Allegation(s)/Issue(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>