force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Does_the_Aggrieved_have_a_Representative__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Aggrieved_have_a_Representative__c</fullName>
    <label>Does the Aggrieved have a Representative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>