force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Email_Address_del__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_del__c</fullName>
    <formula>Aggrieved_Person_del__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>