force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date__c</fullName>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>