force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Initial_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Interview_Date__c</fullName>
    <label>Initial Interview Date</label>
    <type>Date</type>
</CustomField>