force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Is_the_Representative_an_attorney__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Representative_an_attorney__c</fullName>
    <label>Is the Representative an attorney?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>