force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Job_Title_Series_Grade__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Series_Grade__c</fullName>
    <label>Job Title/Series/Grade</label>
    <length>250</length>
    <type>Text</type>
</CustomField>