force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone__c</fullName>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>