force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Permission_to_use_Aggrieved_s_name__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_use_Aggrieved_s_name__c</fullName>
    <inlineHelpText>Permission to use Aggrieved&apos;s name in inquiry/informal EEO process</inlineHelpText>
    <label>Permission to use Aggrieved&apos;s name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>