force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Place_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Employment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Employment</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EEO Intake Questionnaires</relationshipLabel>
    <relationshipName>EEO_Intake_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>