force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Remedial_Corrective_Action_Sought__c.field-meta.xml
<CustomField>
    <fullName>Remedial_Corrective_Action_Sought__c</fullName>
    <inlineHelpText>What remedial or corrective action is the Aggrieved seeking?</inlineHelpText>
    <label>Remedial/Corrective Action Sought</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>