force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel
  >EEO Intake Questionnaires (Representative)</relationshipLabel>
    <relationshipName>EEO_Intake_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>