force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Representative_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Representative_Email_Address__c</fullName>
    <formula>Representative__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative Email Address</label>
    <type>Text</type>
</CustomField>