force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Representative_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Representative_Mailing_Address__c</fullName>
    <label>Representative Mailing Address</label>
    <type>Address</type>
</CustomField>