force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Representative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Representative_Phone__c</fullName>
    <label>Representative Phone</label>
    <type>Phone</type>
</CustomField>