force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Representative_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Representative_s_Title__c</fullName>
    <formula>Representative__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative&apos;s Title</label>
    <type>Text</type>
</CustomField>