force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/fields/Resolution_Path_Selected__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Path_Selected__c</fullName>
    <label>Resolution Path Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EEO Counseling</fullName>
            </value>
            <value>
                <fullName>Alternative Dispute Resolution (ADR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>