force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/listViews/ADR_Workflow_Queue_EEO_Intake_Questionnaire.listView-meta.xml
<ListView>
    <fullName>ADR_Workflow_Queue_EEO_Intake_Questionnaire</fullName>
    <columns>NAME</columns>
    <columns>Aggrieved_Person_del__c</columns>
    <columns>Place_of_Employment__c</columns>
    <columns>Basis__c</columns>
    <columns>Does_the_Aggrieved_have_a_Representative__c</columns>
    <filterScope>Queue</filterScope>
    <label>ADR Workflow Queue</label>
    <queue>ADR_Workflow_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>