force-app/main/Investigations/EEO/objects/EEO_Intake_Questionnaire__c/listViews/All_EEO_Intake_Questionnaires.listView-meta.xml
<ListView>
    <fullName>All_EEO_Intake_Questionnaires</fullName>
    <columns>NAME</columns>
    <columns>Aggrieved_Person_del__c</columns>
    <columns>Place_of_Employment__c</columns>
    <columns>Basis__c</columns>
    <columns>Does_the_Aggrieved_have_a_Representative__c</columns>
    <columns>Resolution_Path_Selected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All EEO Intake Questionnaires</label>
</ListView>